# jwst-data-analysis

./: .claude  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Astronomy.sln  CLAUDE.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  code-review-summary.md  mkdocs.yml  playwright-cli.json
design/: SKILL.md  (+2 more)
processing-engine/: Dockerfile  Dockerfile.mast  main.py  main_mast.py  pyproject.toml  requirements-calibration.txt  requirements-dev.txt  requirements-mast.txt  requirements.txt
processing-engine/app/: config.py  diagnostics.py  exceptions.py  instruments.py  render_gate.py
processing-engine/app/analysis/: api_routes.py  models.py  routes.py
processing-engine/app/auth/: __init__.py  deps.py  routes.py
processing-engine/app/calibration/: __init__.py  executor.py  flags.py  importer.py  models.py  routes.py  store.py
processing-engine/app/composite/: __init__.py  api_routes.py  auto_stretch.py  cache.py  color_mapping.py  models.py  progress.py  quality.py  routes.py
processing-engine/app/db/: __init__.py  access.py  casing.py  client.py  deps.py  projection.py  repository.py
processing-engine/scripts/: prefetch_discovery.py  seed_ce.py
processing-engine/tests/: __init__.py  test_analyze_channels.py  test_auth_deps.py  test_auto_stretch.py  test_avm_embedding.py  test_background.py  test_calibration_executor.py  test_calibration_flags.py  test_calibration_importer.py  test_calibration_recipes.py  test_calibration_smoke.py  test_ce_mode_mounting.py  test_chunked_downloader.py  test_color_mapping.py  test_composite_downscale.py  test_composite_estimate.py  test_composite_framing.py  test_composite_memory_rss.py  test_composite_streaming.py  test_config_env_helpers.py  test_detection.py  test_download_state_manager.py  test_download_tracker.py  test_embedding_service.py  test_enhancement.py  test_error_middleware.py  test_exceptions.py  test_filters.py  test_instruments.py  test_jobs_routes.py  test_jobs_store.py  test_mast_models_validation.py  test_mast_pagination.py  test_mast_service_security.py  test_mast_target_search_variants.py  test_mosaic_engine.py  test_nchannel_composite.py  test_pipeline.py  test_quality.py  test_recipe_engine.py  (+18 more)
(+930 files in other folders)
